@@ -1,4 +1,4 @@
-# Copyright 2000-2013 Free Software Foundation, Inc.
+# Copyright 2000, 2004, 2006-2012 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
